# cmake.sodium

./: CMakeLists.txt  config.cmake.in
